--- a/css/basics/basics.css
+++ b/css/basics/basics.css
@@ -65,7 +65,73 @@ div > p{
 } */
 
 /*4. Descendant selector*/
-
+/* 
 div p{
     color:red;
-}
+} */
+
+/*============Box Model ======================*/
+    html{
+        height: 50vh;
+      
+
+    }
+    body{
+        height: 50vh;
+        margin: 0;
+    }
+
+    .box-model{
+        width: 200px;
+        height: 100px;
+        background-color: black;
+        color:white;
+        text-align: center;
+        padding: 30px;
+        margin:20px; 
+        border:5px solid rgb(207, 54, 54);
+        box-sizing: border-box;
+    }
+
+
+    /*margin-collapsing bigger margin wins*/
+    /* .another-box{
+        width: 200px;
+        height: 100px;
+        background-color: black;
+        color:white;
+        text-align: center;
+        padding: 30px;
+        margin:15px; 
+        border:5px solid rgb(207, 54, 54);
+    }
+ */
+
+ /*shorthand */
+ /* .another-box div{
+       margin: 30px 10px 20px 30px; 
+ } */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
