going to start flex

--- a/css/fonts/style.css
+++ b/css/fonts/style.css
@@ -1,7 +1,7 @@
 
 /*computer local fonts */ 
 @font-face {
-    font-family: "Roboto";
+    font-family: "Roboto" sans-serif;
     src: url(Roboto-Italic.ttf) format(ttf);
     font-style: italic;
 }
